<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Supermarket</string>
     <string name="menu_item_add_lista">Nueva Lista</string>
     <string name="menu_item_mis_listas"> LISTAS</string>
     <string name="menu_item_productos">PRODUCTOS</string>
     <string name="menu_item_cuenta">CUENTA</string>
          <string name="menu_item_ofertas">OFERTAS</string>
     
	 <string name="text_1">Lista 1</string>
	 <string name="text_1.1"></string>
	 <string name="text_2">Lista 2</string>
	 <string name="text_3">Lista 3</string>
	 <string name="text_4">Lista 4</string>
	 <string name="text_5">Lista 5</string>
	 <string name="producto">Producto</string>
	 <string name= "descripcion_imagen">Imagen descripcion</string>
	 <string name="cuenta_nombre">Nombre:Sergio Albeto Flores</string>
	 <string name="cuenta_direccion">Direccion:</string>
	 <string name="cuenta_correo">Correo:safgflores@hotmail.com</string>
	 <string name="boton_agregar">Agregar</string>
	 <string name="boton_eliminar">Eliminar</string>
	 <string name="boton_modificar">Modificar</string>
	 <string name="productos_frutas_y_veduras">Frutas y Verduras</string>
	 <string name="productos_pasteleria">Pasteleria</string>
	 <string name="productos_carnes_frias">Carnes Frias</string>
	 <string name="productos_"></string>
	 
	 <!--fragment_lista_nueva-->
	 
	 <string name="fragment_lista_nueva_titulo"></string>
	 <string name="fragment_lista_nueva_button">Crear</string>
	 
	 <string name="fragment_lista_nueva_TextView_encabezado">Secciones:</string>
	 
	 
	 <!-- XXXXXXXXXXXXXXXXXX -->
	 
	 <!-- fragment_lista_seleccion -->
	<string name="fragment_lista_seleccion_TextView_titulo">Titulo</string>
		<string name="fragment_lista_seleccion_Button_agregar">Agregar</string>
	
	 <!-- ***************************** -->
	 
	 <!-- dialog_nueva_lista -->
	 <string name="dialog_nueva_lista_TextView_nombre">Nombre:</string>
	 <string name="dialog_nueva_lista_EditText_hint">Nombre de la Lista</string>
	 <!-- *************************** -->
	 
	 <!-- lista_context_menu -->
	 
	 <string name="lista_context_menu_item_eliminar">Eliminar</string>
	 
	 <!-- ****************************** -->
	 
	 <!-- menu_lista_mandado -->
	 <string name="menu_lista_mandado_informacion">informacion</string>
	 
</resources>
